# achilles

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  Achilles.sln  Achilles.vcxproj  Achilles.vcxproj.filters  BUILD.bazel  LICENSE  MODULE.bazel  README.md  Readme.md  WORKSPACE.bzlmod  test.txt
docker/: .dockerfile  BUILD.bazel  Dockerfile.build
docs/: BestPractices.md  SETUP.md  VSCode.md
example/: BUILD.bazel
example/app/: BUILD.bazel  main.cpp
example/core/: BUILD.bazel  my_engine.cpp  my_engine.h
example/logger/: logger_init.h
example/port/: BUILD.bazel
example/resources/: objectMap.txt  objectTypes.txt
include/: config.h
libs/Engine/include/: Engine.h  debug.h  tools.h
libs/Engine/src/: Engine.cpp  debug.cpp  tools.cpp
libs/Logger/include/: logger.h
resources/: objectMap.txt  objectTypes.txt  textures.txt
src/: BUILD.bazel  main.cpp  tools.h
src/app/: BUILD.bazel  config.h  main.cpp
src/core/: BUILD.bazel  engine.cpp  engine.h
src/core/engine/: BUILD.bazel  engine.cpp  engine.h
src/core/tools/: BUILD.bazel  tools.cpp  tools.h
src/engine/include/: Engine.h  tools.h
src/engine/src/: tools.cpp
src/logger/: BUILD.bazel
src/logger_config/: BUILD.bazel  init.h
src/tools/: tools.cpp  tools.h
tests/math/: BUILD.bazel  test.cpp
tools/: BUILD  dwyu_ignore_includes.json  helpers.bzl
x64/Debug/: Achilles.exe.recipe  Achilles.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Release/: Achilles.exe.recipe  Achilles.vcxproj.FileListAbsolute.txt
