load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "my_engine",
    hdrs = [
        "my_engine.h",
    ],
    srcs = [
        "my_engine.cpp",
    ],
    deps = [
        "//src/core:engine",
        "//src/tools:tools",
        "//third_party:sfml",
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)