load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "config",
    hdrs = [
        "config.h",
    ],
)

cc_binary(
    name = "game",
    srcs = [
        "main.cpp",
    ],
    data = [
        "//:resources",
    ],
    deps = [
        ":config",
        "//src/core/engine:engine",
        "//src/core/tools:tools",
        "//src/logger:logger_init",
        "//third_party:sfml",
        "@spdlog//:spdlog",
    ],
)
