load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "engine",
    hdrs = [
        "engine.h",
    ],
    srcs = [
        "engine.cpp",
    ],
    deps = [
        "//src/core/tools:tools",
        "//third_party:sfml",
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)